--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ p {
 #fh5co-home .flexslider .slides li {
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 50% 0 !important;
 }
 #fh5co-home .flexslider .fh5co-overlay {
   position: absolute;
